--- a/site.html
+++ b/site.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@300;400;700&display=swap" rel="stylesheet">
     <link href="site.css" rel="stylesheet">
-
+    <meta charset="utf-8">
 
 </head>
 
