--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Myster Quest</title>
 
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@300;400;700&display=swap" rel="stylesheet">
     <link href="site.css" rel="stylesheet">
