--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                 <img src="images/logo.png" class="logo">
                 <h1 class="titre"> Myster Quest</h1>
             </div>
+            <div class="soustitre"> Un escape-game a la maison !</div> </br>
             <div class="texte">
-                Un escape-game a la maison ! </br>
                 📱Servez-vous de votre téléphone pour avancer</br>
                 👥 jouez en équipe de 2 à 7 joueurs</br>
                 ⏳ Amusez-vous pendant 60 minutes</br>
@@ -29,7 +29,8 @@
             </div>
         </div>
         <div class="align-right colonne2">
-            <img src="images/iPhone15.png"></img>
+            <img class="iphone" src="images/iPhone15.png"></img>
+
         </div>
     </div>
 </body>
