réduction taille bouton

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 📱Servez-vous de votre téléphone pour avancer</br>
                 👥 jouez en équipe de 2 à 7 joueurs</br>
                 ⏳ Amusez-vous pendant 60 minutes</br>
-                <img src="images/apple.png"></img> </br>
+                <img src="images/apple.png"></img>
                 <img class="image" src="images/playstore.png"></img>
                 <div class="bouton"> Télécharger </div>
             </div>
