--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 ⏳ Amusez-vous pendant 60 minutes</br>
                 <img src="images/apple.png"></img>
                 <img class="image" src="images/playstore.png"></img>
-                <div class="bouton"> Télécharger </div>
+                <div class="bouton"> <img class="logo_black" src="images/logo_black.png"> Télécharger </div>
             </div>
         </div>
         <div class="align-right colonne2">
