--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <img src="images/apple.png"></img>
                 <img class="image" src="images/playstore.png"></img>
                 <div class="bouton"> <img class="logo_black" src="images/logo_black.png"> Télécharger </div>
+                <div class="connexion"><a href="login.html">Connexion</a></div>  
             </div>
         </div>
         <div class="align-right colonne2">
