--- a/inscription.html
+++ b/inscription.html
@@ -11,6 +11,7 @@
 
 </head>
 
+</html>
 
 <body>
     <div class="login">
@@ -21,17 +22,16 @@
             <h1>Myster Quest</h1>
         </div><br>
         <div class="whitebox center">
-            <img class="avatar" src="images/logo-mail.png" alt="avatar"><br>
-
-            Email<br>
+            <img class="avatar" src="images/avatar.png" alt="avatar"><br> Email ID<br>
             <input type="text"></input><br><br>
-            <div class="bouton center"> Connexion
+            Mot de passe<br>
+            <input type="text"></input><br><br>
+            Confirmer le mot de passe<br>
+            <input type="text"></input>
+            <div class="bouton center"> Envoyer
 
             </div>
 
         </div>
     </div>
 </body>
-
-
-</html>
