--- a/login.html
+++ b/login.html
@@ -28,6 +28,7 @@
             Mot de passe<br>
             <input type="text"></input>
             <div class="password"><a href="resetpsw.html">Mot de passe oublié</a></div>
+            <div class="password"><a href="inscription.html"><br><br><br><br>Inscription</a></div>
             <div class="bouton center"> Envoyer
 
             </div>
