Finalisation html desktop

--- a/inscription.html
+++ b/inscription.html
@@ -22,14 +22,23 @@
             <h1>Myster Quest</h1>
         </div><br>
         <div class="whitebox center">
-            <img class="avatar" src="images/avatar.png" alt="avatar"><br> Email ID<br>
-            <input type="text"></input><br><br>
-            Mot de passe<br>
-            <input type="text"></input><br><br>
-            Confirmer le mot de passe<br>
-            <input type="text"></input>
-            <div class="bouton center"> Envoyer
-
+            <img class="avatar center" src="images/avatar.png" alt="avatar"> 
+            <div class="field center">
+                Email ID<br>
+                <input type="text"></input>
+            </div>
+            <div class="field center">
+                Mot de passe<br>
+                <input type="text"></input>
+            </div>
+            <div class="field center">
+                Confirmer le mot de passe
+                <input type="text"></input>
+            </div>
+            <div class="spacer"></div>
+            <div class="link"><a href="login.html"> Se connecter</a></div>
+            <div class="bouton center"> 
+                S'inscrire
             </div>
 
         </div>
