--- a/login.html
+++ b/login.html
@@ -19,17 +19,22 @@
 
             <img src="images/logo.png" alt="Logo">
             <h1>Myster Quest</h1>
-        </div><br>
+        </div>
         <div class="whitebox center">
-            <img class="avatar" src="images/avatar.png" alt="avatar"><br>
+            <img class="avatar center" src="images/avatar.png" alt="avatar">
 
-            Email ID<br>
-            <input type="text"></input><br><br>
-            Mot de passe<br>
-            <input type="text"></input>
-            <div class="password"><a href="resetpsw.html">Mot de passe oublié</a></div>
-            <div class="password"><a href="inscription.html"><br><br><br><br>Inscription</a></div>
-            <div class="bouton center"> Envoyer
+            <div class="field center">
+                Email ID<br>
+                <input type="text"></input>
+            </div>
+            <div class="field center">
+                Mot de passe<br>
+                <input type="text"></input>
+            </div>
+            <div class="link"><a href="resetpsw.html">Mot de passe oublié</a></div>
+            <div class="spacer"></div>
+            <div class="link"><a href="inscription.html">Inscription</a></div>
+            <div class="bouton center"> Connexion
 
             </div>
 
