--- a/resetpsw.html
+++ b/resetpsw.html
@@ -13,7 +13,7 @@
 
 
 <body>
-    <div class="login">
+    <div class="reset_password">
 
         <div class="titre inline center">
 
@@ -21,12 +21,15 @@
             <h1>Myster Quest</h1>
         </div><br>
         <div class="whitebox center">
-            <img class="avatar" src="images/logo-mail.png" alt="avatar"><br>
-
-            Email<br>
-            <input type="text"></input><br><br>
-            <div class="bouton center"> Connexion
-
+            <img class="center avatar" src="images/logo-mail.png" alt="avatar">
+            <div class="field center">
+                Email<br>
+                <input type="text"></input>
+            </div>
+            <div class="spacer"></div>
+            <div class="link"><a href="login.html"> Se connecter</a></div>
+            <div class="bouton center"> 
+                Envoyer
             </div>
 
         </div>
